--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     </header>
 
     <!-- Main -->
-    <main style="height: 5000px">
+    <main style="height: 7000px">
       <!-- Our Services -->
       <section class="service">
         <div class="container">
@@ -592,6 +592,22 @@
                 </section>
               </article>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Appointment -->
+      <section class="appointment">
+        <div class="container">
+          <div class="appointment__inner">
+            <h2 class="appointment__heading section-heading">
+              Always welcoming new patients
+            </h2>
+            <p class="appointment__desc section-desc">
+              Take control of your dental health and get the personalized care
+              you deserve. Call (541) 772-8846 to schedule
+            </p>
+            <a href="#!" class="btn">Appointment</a>
           </div>
         </div>
       </section>
